--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-masked-view/masked-view": "0.2.9",
     "@react-navigation/bottom-tabs": "^6.5.10",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.15",
     "@react-navigation/stack": "^6.3.19",
+    "@rneui/base": "^0.0.0-edge.2",
+    "@rneui/themed": "^0.0.0-edge.2",
     "@types/react": "~18.2.14",
+    "axios": "^1.5.1",
     "expo": "~49.0.15",
     "expo-linear-gradient": "~12.3.0",
     "expo-splash-screen": "~0.20.5",
@@ -22,8 +26,9 @@
     "formik": "^2.4.5",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-safe-area-context": "4.6.3",
+    "react-native-safe-area-context": "^4.7.3",
     "react-native-screens": "~3.22.0",
     "react-native-splash-screen": "^3.3.0",
     "typescript": "^5.1.3"
